Fixed bug where content was appearing on top of toolbars on iOS

--- a/src/theme/styles.css
+++ b/src/theme/styles.css
@@ -14,7 +14,8 @@ ion-item {
 }
 
 ion-header {
-  backdrop-filter: blur(10px);
+  background: var(--ion-background-color);
+  padding-top: var(--ion-safe-area-top);
   box-shadow: 0px 15px 20px 5px #0000000a;
 }
 
@@ -22,9 +23,9 @@ ion-header {
   --background: #ffffffa8 // fails dark theme
 } */
 
-ion-header ion-toolbar:first-of-type {
+/* ion-header ion-toolbar:first-of-type {
   margin-top: var(--ion-safe-area-top);
-}
+} */
 
 .hide-item-click-animation {
   --padding-end: 10px;
