--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -7,6 +7,7 @@ http://ionicframework.com/docs/theming/ */
 
 :root {
   --ion-font-family: Kanit;
+  --ion-background-color: white;
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
